--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </head>
     
     <body>
-   <!-- All content goes here -->
+     <!-- All content goes here -->
          <div id="all-contents">
              <nav>
                  <h1>DMC Offcial Website</h1>
@@ -85,11 +85,13 @@
              <main>
               <!-- Sidebar section -->
                   <div class="sidebar">  
-                    <img class="sidebar-img" src="https://lh3.googleusercontent.com/iVxNAYcM0oYBTZvemglTMcbo3xa2VWUDTJ0MmgWiUAtUD772Bs2iA4XwwuLdZJLdYpMIbXNrXdUf6RNghMcX3tFlLLxy4HgdBCm4I2O-ioIvWMi_V4pD1rvkxlCq58rZHyB3-uT7fUsM4sYZzkMjOmTlNnsTpOdjMtVzkklRJIeJcM2DmIlF14NhrTuf_J5lvsZnjkccTL93GcOmh8reaD5yZEIzh8eLaDkw-GNcdarDXqgfIkMbiV3-7kVrzBud56yadwn4mqNzxkXBT4_WUc2HW3iiPd-7b2wf1fbQiMiG9oqoVQYv3f8X0vX1b_ub3the6ldTh8tWle_q1U2flZ9sr3XZWqtj6s68-t_scSp39tF5haBQwUkluJ6NZOzGpEx4w0N9FM-OgtR6xiNK1rk8ze3yTr1Pe2O39c9Zk1PzHpTchQFd7CaWizdOTra_m-QmvtrzDFL_4zFe6Bxdg720BlO5XGYCl71qIhPnVLDDBcPfvwXDXFcvLB-sDOtxCdq702grO3PkBAt94cGgS9xaEpIbS2eqoqfxuX0w_LCvtBaZ2TlGeP91zEHk8bB49HV5UbgWogQ7RZqj3l_IJ46-Tz6nOGjyt3mR-FAVAG38kajqVj0lVfvFcN7zDLoHixBM-rdOVbOO1SVwm6eeZ2Y1g1J450PC41lQw8_wpfw0mt1KSRPM7TF4T1h98RGyaq1WS4aYldhibg3LRCpz18kZs709rk9zHOB2GQ8iHtLR8cwewkUsp67OFwkket0zPXgnnvvWcEsU_AzbIL79OTv7KStovGU-LO4p=w400-h224-no?authuser=0"
-                  <!-- Content section -->
+                    <img class="sidebar-img" src="https://lh3.googleusercontent.com/iVxNAYcM0oYBTZvemglTMcbo3xa2VWUDTJ0MmgWiUAtUD772Bs2iA4XwwuLdZJLdYpMIbXNrXdUf6RNghMcX3tFlLLxy4HgdBCm4I2O-ioIvWMi_V4pD1rvkxlCq58rZHyB3-uT7fUsM4sYZzkMjOmTlNnsTpOdjMtVzkklRJIeJcM2DmIlF14NhrTuf_J5lvsZnjkccTL93GcOmh8reaD5yZEIzh8eLaDkw-GNcdarDXqgfIkMbiV3-7kVrzBud56yadwn4mqNzxkXBT4_WUc2HW3iiPd-7b2wf1fbQiMiG9oqoVQYv3f8X0vX1b_ub3the6ldTh8tWle_q1U2flZ9sr3XZWqtj6s68-t_scSp39tF5haBQwUkluJ6NZOzGpEx4w0N9FM-OgtR6xiNK1rk8ze3yTr1Pe2O39c9Zk1PzHpTchQFd7CaWizdOTra_m-QmvtrzDFL_4zFe6Bxdg720BlO5XGYCl71qIhPnVLDDBcPfvwXDXFcvLB-sDOtxCdq702grO3PkBAt94cGgS9xaEpIbS2eqoqfxuX0w_LCvtBaZ2TlGeP91zEHk8bB49HV5UbgWogQ7RZqj3l_IJ46-Tz6nOGjyt3mR-FAVAG38kajqVj0lVfvFcN7zDLoHixBM-rdOVbOO1SVwm6eeZ2Y1g1J450PC41lQw8_wpfw0mt1KSRPM7TF4T1h98RGyaq1WS4aYldhibg3LRCpz18kZs709rk9zHOB2GQ8iHtLR8cwewkUsp67OFwkket0zPXgnnvvWcEsU_AzbIL79OTv7KStovGU-LO4p=w400-h224-no?authuser=0">
+                   </div>
+                    <!-- Content section -->
                   <div class="content">
-                      <h2>Deshawn Coleman</h2>
+                      <h2>Deshawn Coleman</h2> 
                       <p>Student at MLK High</p>
+                  </div>
                       <!-- Interests section -->
                       <div id="interests">
                           <h3>Interests</h3>
@@ -99,7 +101,6 @@
                                 <li>Eating</li>
                             </ul>
                         </div>
-                    </div>
 
              </main>
          </div> 
