--- a/index.html
+++ b/index.html
@@ -83,15 +83,15 @@
              </nav>
                 
              <main>
-              <!-- Sidebar section -->
-                  <div class="sidebar">  
-                    <img class="sidebar-img" src="https://lh3.googleusercontent.com/iVxNAYcM0oYBTZvemglTMcbo3xa2VWUDTJ0MmgWiUAtUD772Bs2iA4XwwuLdZJLdYpMIbXNrXdUf6RNghMcX3tFlLLxy4HgdBCm4I2O-ioIvWMi_V4pD1rvkxlCq58rZHyB3-uT7fUsM4sYZzkMjOmTlNnsTpOdjMtVzkklRJIeJcM2DmIlF14NhrTuf_J5lvsZnjkccTL93GcOmh8reaD5yZEIzh8eLaDkw-GNcdarDXqgfIkMbiV3-7kVrzBud56yadwn4mqNzxkXBT4_WUc2HW3iiPd-7b2wf1fbQiMiG9oqoVQYv3f8X0vX1b_ub3the6ldTh8tWle_q1U2flZ9sr3XZWqtj6s68-t_scSp39tF5haBQwUkluJ6NZOzGpEx4w0N9FM-OgtR6xiNK1rk8ze3yTr1Pe2O39c9Zk1PzHpTchQFd7CaWizdOTra_m-QmvtrzDFL_4zFe6Bxdg720BlO5XGYCl71qIhPnVLDDBcPfvwXDXFcvLB-sDOtxCdq702grO3PkBAt94cGgS9xaEpIbS2eqoqfxuX0w_LCvtBaZ2TlGeP91zEHk8bB49HV5UbgWogQ7RZqj3l_IJ46-Tz6nOGjyt3mR-FAVAG38kajqVj0lVfvFcN7zDLoHixBM-rdOVbOO1SVwm6eeZ2Y1g1J450PC41lQw8_wpfw0mt1KSRPM7TF4T1h98RGyaq1WS4aYldhibg3LRCpz18kZs709rk9zHOB2GQ8iHtLR8cwewkUsp67OFwkket0zPXgnnvvWcEsU_AzbIL79OTv7KStovGU-LO4p=w400-h224-no?authuser=0">
-                   </div>
-                    <!-- Content section -->
-                  <div class="content">
+                <!-- Sidebar section -->
+                <div class="sidebar">  
+                    <img class="sidebar-img" src="https://lh3.googleusercontent.com/yU9OATMs4MsM0nPe29F8j0bsLG2ZgsEJxuYjPQirbfXedi3jr1ljcLjBSNb6EDJ3lz9078Dj8-gTO1VrSGyF-M94SfGIi37dDZdiaSCk2wc0aXR1bmwfIbYIQK_9UFYjpM7COAjOLzUF62MUwQPLQB-u4iBS4bOhYgIEWna-v5pY7k2L3GlhxOmJM7Xje0Imga43SF4KXryDAaz3O5ziskQS_vaUPfxRJgtRQqCeGzc3EegoOEEeVeEEvjOYK-RPNns68IyfMM2-FouLBuI-h2L7eP5XiV6UyPc7BOXY8Hvlby95qIGOn-DA8emZqu-uuOh7FD6IqGHA3GzbueF82LIBpdZNatHx7jsqdG8dUwzBEhKlnbjk2MXE14YNQx4ejiGjDqIxx2yYW16WsxXOTli1NRlj0zJgoW4UkkIWRnJjqAhnqscFeNWXJcx5KHWhtQw_gpkqmjRQQ-Xskg0nLowUAYYDb2-1dkwSM_c_Vp4LXIa7QzbC-iGz7tzpTD-Y21bfxEYH7zHflPjTHtAeR20RGJU1QGrE84o_xVRvZgv65w2zVqi2htlFgfF3du1Wbf32ArhYPOB6E1rfQh0WMMu1HEN0F0S_eDos5KH9JNGovuFdZwq8R8SUzfO8faQJjigtpyAjsth__b0AD6Q_S2bmyweMGlrVvyI1D6mlEgZWuMG0e5axyh5l1aW2-3EVgTJGSjCWdAKjCB9KDCqnnJsUIWZdx0VMJpr5s2U_SGgjrO0psBJ-NX3iGpiWUdYtBfhbPsHw5Q8U6Np8Zagfn9IVS78-3qU0WoLL=w540-h590-no?authuser=0">
+                </div>https://w7.pngwing.com/pngs/881/498/png-transparent-dmc-importacao-e-exportacao-de-equipamentos-ltda-dmc-group-dmc-abc-equipamentos-physician-dentistry-low-level-laser-therapy-dmc-blue-text-trademark-thumbnail.png
+                <!-- Content section -->
+                <div class="content">
                       <h2>Deshawn Coleman</h2> 
                       <p>Student at MLK High</p>
-                  </div>
+                </div>
                       <!-- Interests section -->
                       <div id="interests">
                           <h3>Interests</h3>
