<message about commit>

--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -61,7 +61,7 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			
+			var positionX;
 
 			
 			/* 
@@ -70,7 +70,9 @@
 			turn it around! 
 			*/
 			function update() {
-				moveBoxTo(board)
+				 /* Your Code to Increase positionX by 10 HERE*/
+				 positionX = positionX + 10;
+				moveBoxTo(positionX);
 
 			};
 
