--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left:500px;  /* <--- Change me! */
+			left:200px;  /* <--- Change me! */
 		}
 		.board{
 			height: 100vh;
@@ -61,19 +61,24 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
-			var positionX;
-
-			
+			var positionX = 0;
+            var points = 0;
+			var speed = 10
 			/* 
 			This Function will be called 20 times/second. Each time it is called,
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
 			function update() {
-				 /* Your Code to Increase positionX by 10 HERE*/
-				 positionX = positionX + 10;
-				moveBoxTo(positionX);
-
+			 /* Your Code to Increase positionX by 10 HERE*/
+			 positionX = positionX + speed;	
+				moveBoxTo(positionX)
+                if(positionX > boardWidth){
+					speed = -speed;
+				}
+             if(positionX < 0){
+				speed = -speed;
+			 }
 			};
 
 			/* 
@@ -82,9 +87,16 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
+				positionX = 0;
+                changeBoxText(points);
+                points = points + 1
 				
-
-
+			if(speed > 0){
+				speed = speed + 3;
+			}
+			else if(speed < 0){
+				speed = speed - 3;
+			}
 			};
 		})();
 	</script>
