adding ASD projects

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
              <main>
                 <!-- Sidebar section -->
                 <div class="sidebar">  
-                    <img class="sidebar-img" src="https://w7.pngwing.com/pngs/881/498/png-transparent-dmc-importacao-e-exportacao-de-equipamentos-ltda-dmc-group-dmc-abc-equipamentos-physician-dentistry-low-level-laser-therapy-dmc-blue-text-trademark-thumbnail.png">
+                    <img class="sidebar-img" src=<"https://lh3.googleusercontent.com/yU9OATMs4MsM0nPe29F8j0bsLG2ZgsEJxuYjPQirbfXedi3jr1ljcLjBSNb6EDJ3lz9078Dj8-gTO1VrSGyF-M94SfGIi37dDZdiaSCk2wc0aXR1bmwfIbYIQK_9UFYjpM7COAjOLzUF62MUwQPLQB-u4iBS4bOhYgIEWna-v5pY7k2L3GlhxOmJM7Xje0Imga43SF4KXryDAaz3O5ziskQS_vaUPfxRJgtRQqCeGzc3EegoOEEeVeEEvjOYK-RPNns68IyfMM2-FouLBuI-h2L7eP5XiV6UyPc7BOXY8Hvlby95qIGOn-DA8emZqu-uuOh7FD6IqGHA3GzbueF82LIBpdZNatHx7jsqdG8dUwzBEhKlnbjk2MXE14YNQx4ejiGjDqIxx2yYW16WsxXOTli1NRlj0zJgoW4UkkIWRnJjqAhnqscFeNWXJcx5KHWhtQw_gpkqmjRQQ-Xskg0nLowUAYYDb2-1dkwSM_c_Vp4LXIa7QzbC-iGz7tzpTD-Y21bfxEYH7zHflPjTHtAeR20RGJU1QGrE84o_xVRvZgv65w2zVqi2htlFgfF3du1Wbf32ArhYPOB6E1rfQh0WMMu1HEN0F0S_eDos5KH9JNGovuFdZwq8R8SUzfO8faQJjigtpyAjsth__b0AD6Q_S2bmyweMGlrVvyI1D6mlEgZWuMG0e5axyh5l1aW2-3EVgTJGSjCWdAKjCB9KDCqnnJsUIWZdx0VMJpr5s2U_SGgjrO0psBJ-NX3iGpiWUdYtBfhbPsHw5Q8U6Np8Zagfn9IVS78-3qU0WoLL=w540-h590-no?authuser=0"">
                 </div>
                 <!-- Content section -->
                 <div class="content">
